Day3/spring-ms/hello-microservice-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-microservice
  name: hello-microservice
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-microservice
status:
  loadBalancer: {}
