Day3/spring-ms/hello-microservice-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: hello-microservice
  name: hello-microservice
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: hello-microservice
    weight: null
status: {}
